--- a/index.ipynb
+++ b/index.ipynb
@@ -793,7 +793,7 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    return selected_trip['pickup_latitude']-neighbor"
+    "    return math.sqrt((selected_trip['pickup_latitude']-neighbor_trip['pickup_latitude'])**2+(selected_trip['pickup_longitude']-neighbor_trip['pickup_longitude'])**2)"
    ]
   },
   {
