--- a/index.ipynb
+++ b/index.ipynb
@@ -896,7 +896,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    "
+    "    return list(map(lambda neighbor:))"
    ]
   },
   {
