--- a/index.ipynb
+++ b/index.ipynb
@@ -896,7 +896,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    return list(map(lambda neighbor:{'distance_from_selected':neighbor}))"
+    "    return list(map(lambda neighbor:{'distance_from_selected':neighbor['distance_from_selected']},neighbors))"
    ]
   },
   {
