Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -896,6 +896,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
+    "    distance=distance_between_\n",
     "    return list(map(lambda neighbor:{'distance_from_selected':neighbor['distance_from_selected']},neighbors))"
    ]
   },
