--- a/index.ipynb
+++ b/index.ipynb
@@ -891,20 +891,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    distance=distance_between_neighbors(selected_individual,neighbors)\n",
-    "    return list(map(lambda neighbor:{'distance_from_selected':neighbor['distance_from_selected']},neighbors))"
+    "    return list(map(lambda neighbor:{'distance_from_selected':neighbor['distance_from_selected']},distance))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cleaned_trips' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-2f8b2fe64dab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcleaned_trips\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mdistance_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_trip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcleaned_trips\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'cleaned_trips' is not defined"
+     ]
+    }
+   ],
    "source": [
     "cleaned_trips and distance_all(first_trip, cleaned_trips[0:4])"
    ]
