Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -896,8 +896,8 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    distance=distance_between_neighbors(selected_individual,neighbors)\n",
-    "    return list(map(lambda neighbor:{'distance_from_selected':neighbor['distance_from_selected']},distance))"
+    "    distance=list(map(lambda neighbor: distance_between_neighbors(selected_individual,neighbor)\n",
+    "    return list(map(lambda neighbor:{'distance_from_selected':neighbor['distance_from_selected']},))"
    ]
   },
   {
