Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -896,7 +896,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    filt=list(filter(lambda neighbor:neighbor['name']!=selected_individual,neighbors))\n",
+    "    filt=list(filter(lambda neighbor:neighbor['pickup_latitude']!=selected_individual['pickup_latitude'] and neighbor['pickup_longitude']1,neighbors))\n",
     "    distance=list(map(lambda neighbor: distance_between_neighbors(selected_individual,neighbor),filt))\n",
     "    return list(map(lambda neighbor:{'distance_from_selected':neighbor['distance_from_selected']},distance))"
    ]
