--- a/index.ipynb
+++ b/index.ipynb
@@ -938,7 +938,7 @@
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    number=number of len(trips)\n",
-    "    "
+    "    distances="
    ]
   },
   {
