Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -932,20 +932,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    number=number of len(trips)\n",
-    "    distances="
+    "    number=number or len(trips)\n",
+    "    distances=distance_all(selected_trip,trips)\n",
+    "    return distances[:number]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'distance_from_selected': 0.23505256047318146},\n",
+       " {'distance_from_selected': 0.2162779533470808},\n",
+       " {'distance_from_selected': 0.24242215976473674}]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_trip = {'pickup_latitude': 40.64499,\n",
     "'pickup_longitude': -73.78115,\n",
