--- a/index.ipynb
+++ b/index.ipynb
@@ -939,6 +939,7 @@
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    number=number or len(trips)\n",
     "    distances=distance_all(selected_trip,trips)\n",
+    "    sorted_neighbors=\n",
     "    return distances[:number]"
    ]
   },
