Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -932,31 +932,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    number=number or len(trips)\n",
     "    distances=distance_all(selected_trip,trips)\n",
-    "    sorted_neighbors=sorted(distances,key=lambda neighbor:neighbor[''])\n",
-    "    return distances[:number]"
+    "    sorted_neighbors=sorted(distances,key=lambda neighbor:neighbor['distance_from_selected'])\n",
+    "    return sorted_neighbors[:number]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'distance_from_selected': 0.23505256047318146},\n",
-       " {'distance_from_selected': 0.2162779533470808},\n",
-       " {'distance_from_selected': 0.24242215976473674}]"
+       "[{'distance_from_selected': 0.0004569288784918792},\n",
+       " {'distance_from_selected': 0.0011292165425673159},\n",
+       " {'distance_from_selected': 0.0042359798158141185}]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
