Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -891,30 +891,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    filt=list(filter(lambda neighbor:neighbor['pickup_latitude']!=selected_individual['pickup_latitude'] and neighbor['pickup_longitude']!=selected_individual['pickup_longitude'],neighbors))\n",
     "    distance=list(map(lambda neighbor: distance_between_neighbors(selected_individual,neighbor),filt))\n",
-    "    return list(map(lambda neighbor:{'distance_from_selected':neighbor['distance_from_selected'],'pickup_latitude':neighbor['pickup_latitude'],'pickup_l'},distance))"
+    "    return list(map(lambda neighbor:{'distance_from_selected':neighbor['distance_from_selected'],'pickup_latitude':neighbor['pickup_latitude'],'pickup_longitude':neighbor['pickup_longitude']},distance))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'distance_from_selected': 0.23505256047318146},\n",
-       " {'distance_from_selected': 0.2162779533470808},\n",
-       " {'distance_from_selected': 0.24242215976473674}]"
+       "[{'distance_from_selected': 0.23505256047318146,\n",
+       "  'pickup_latitude': 40.766931,\n",
+       "  'pickup_longitude': -73.982098},\n",
+       " {'distance_from_selected': 0.2162779533470808,\n",
+       "  'pickup_latitude': 40.77773,\n",
+       "  'pickup_longitude': -73.951902},\n",
+       " {'distance_from_selected': 0.24242215976473674,\n",
+       "  'pickup_latitude': 40.795678,\n",
+       "  'pickup_longitude': -73.971049}]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,18 +951,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'distance_from_selected': 0.0004569288784918792},\n",
-       " {'distance_from_selected': 0.0011292165425673159},\n",
-       " {'distance_from_selected': 0.0042359798158141185}]"
+       "[{'distance_from_selected': 0.0004569288784918792,\n",
+       "  'pickup_latitude': 40.64483,\n",
+       "  'pickup_longitude': -73.781578},\n",
+       " {'distance_from_selected': 0.0011292165425673159,\n",
+       "  'pickup_latitude': 40.644657,\n",
+       "  'pickup_longitude': -73.782229},\n",
+       " {'distance_from_selected': 0.0042359798158141185,\n",
+       "  'pickup_latitude': 40.648509,\n",
+       "  'pickup_longitude': -73.783508}]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
