--- a/index.ipynb
+++ b/index.ipynb
@@ -945,7 +945,7 @@
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    number=number or len(trips)\n",
     "    distances=distance_all(selected_trip,trips)\n",
-    "    sorted_neighbors=sorted(distances,key=lambda neighbor:neighbor['distance_from_selected'])\n",
+    "    sorted_neighbors=sorted(distances,key=lambda trip:trip['distance_from_selected'])\n",
     "    return sorted_neighbors[:number]"
    ]
   },
